deployment/wasmbox/ksvc-standalone.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: wasmws
spec:
  template:
    metadata:
      annotations:
        features.knative.dev/superpod: "Enabled"
    spec:
      containers:
        - image: aminb7/wasm_ws:wasmedge_exp1_500_v12
          ports:
          - containerPort: 8095
          readinessProbe:
            httpGet:
              port: 8086
              path: "/ready"
            periodSeconds: 1
          resources:
            requests:
              cpu: "3000m"
              memory: "6500Mi"
            limits:
              cpu: "4200m"
              memory: "9100Mi"
          volumeMounts:
            - mountPath: /data
              name: wasm-cgroup
              readOnly: false
            # - name: cephfs-pvc
            #   mountPath: /functions
          env:
            - name: LOG_LEVEL
              value: "info"
            - name: POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: WEBSERVER_HOST
              value: ""
            - name: WEBSERVER_PORT
              value: "8095"
            - name: WASM_RUNTIME
              value: "wasmedge"
            - name: READINESS_WINDOW
              value: "5"
            - name: READINESS_UTILIZATION_TRESHOLD
              value: "0.9"
            - name: READINESS_RAND_TRESHOLD
              value: "40"
            - name: GC_UTILIZATION_TRESHOLD
              value: "0.9"
            - name: MEMORY_LIMIT
              value: "650000"
            - name: HEALTHCHECK_HOST
              value: ""
            - name: HEALTHCHECK_PORT
              value: "8086"
            - name: METRICS_COLLECTION_WINDOW
              value: "5"
            - name: REPORTING_PERIOD_MS
              value: "50"
            - name: QP_HOST
              value: "ws://127.0.0.1"
            - name: QP_PORT
              value: "9096"
            - name: MAX_RETRIES
              value: "5"
            - name: RETRY_DELAY_SEC
              value: "2"
            - name: MEM_PRE_ALLOCATION_RATIO
              value: "0.2"
            - name: ENABLE_MEM_PRE_ALLOCATION
              value: "true"

      volumes:
        - name: wasm-cgroup
          persistentVolumeClaim:
            claimName: wasm-cgroup-pv-claim
            readOnly: false
        # - name: cephfs-pvc
        #   persistentVolumeClaim:
        #     claimName: wasmws-cephfs-pvc
