deployment/wasmbox/service_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-test-service2
spec:
  selector:
    uniqueid: uniquepodid2
  ports:
    - protocol: TCP
      port: 59152
      targetPort: 59152
