deployment/wasmbox/route_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-test-service
            port:
              number: 59152
